force-app/main/default/objects/AgileProject__c/AgileProject__c.object-meta.xml
<CustomObject>
    <label>Projeto</label>
    <nameField>
        <label>Nome de Projeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projetos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>