force-app/main/default/objects/AgileProject__c/fields/GoLiveDate__c.field-meta.xml
<CustomField>
    <fullName>GoLiveDate__c</fullName>
    <label>Data do go-live</label>
    <type>Date</type>
</CustomField>