force-app/main/default/objects/AgileProject__c/fields/InitialProjectValue__c.field-meta.xml
<CustomField>
    <fullName>InitialProjectValue__c</fullName>
    <description>Valor acordado do projeto.</description>
    <inlineHelpText>Valor acordado do projeto.</inlineHelpText>
    <label>Valor inicial do projeto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>