force-app/main/default/objects/AgileProject__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Data de início do projeto.</description>
    <inlineHelpText>Data de início do projeto.</inlineHelpText>
    <label>Data de início</label>
    <type>Date</type>
</CustomField>