force-app/main/default/objects/AgileProject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>StartDate__c</columns>
    <columns>FinalDate__c</columns>
    <columns>InitialProjectValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>