force-app/main/default/objects/AgileProject__c/listViews/EmExecucao.listView-meta.xml
<ListView>
    <fullName>EmExecucao</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>StartDate__c</columns>
    <columns>FinalDate__c</columns>
    <columns>InitialProjectValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FinalDate__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Em execução</label>
</ListView>